# ssf

./: .clang-format  .gitignore  .travis.yml  404.html  CMakeLists.txt  CMakePresets.json  Doxyfile  azure-pipelines.yml  conanfile.py  doxybook2-config.json  index.html  meson.build  mkdocs.yml  package.json  readme.md  requirements.txt  sitemap.xml  socket.cpp  socket.hpp  sonar-project.properties
.github/workflows/: analysis.yml  cmake-macos.yml  cmake.yml  on-tag.yml
annotated/: index.html
azure/: docs-mkdocs.yml  docs-sphinx.yml  docs-steps-mkdocs.yml  docs-steps-sphinx.yml  docs-steps-vuepress.yml  docs-vuepress.yml  jobs-docs.yml  jobs-win2019-llvm.yml  steps-mac.yml  steps-ubuntu.yml  steps-win-llvm.yml  steps-win-vs.yml  vm-macos-latest.yml  vm-ubuntu-16.04.yml  vm-vs2017-win2016.yml  vm-win-llvm.yml  vm-win-vs.yml  vm-windows-2019.yml
class_member_enums/: index.html
class_member_functions/: index.html
class_member_typedefs/: index.html
class_member_variables/: index.html
class_members/: index.html
classes/: index.html
dir_68267d1309a1af8e8297ef4c3efbcdba/: index.html
docs/: .gitignore  Doxyfile  conf.py  doxybook2-config.json  index.md  index.rst  readme.md  requirements.txt
docs/.vuepress/: config.js
docs/source/: conf.py
files/: index.html
functions/: index.html
hierarchy/: index.html
index_classes/: index.html
index_examples/: index.html
index_files/: index.html
index_groups/: index.html
index_namespaces/: index.html
index_pages/: index.html
macros/: index.html
modules/: index.html
namespace_member_enums/: index.html
namespace_member_functions/: index.html
namespace_member_typedefs/: index.html
namespace_member_variables/: index.html
namespace_members/: index.html
namespaces/: index.html
namespacestd/: index.html
pages/: index.html
scripts/: build-vs2017-cmake-clang.bat  build-vs2019-cmake-clang.bat  release-docs.sh  setup-compilers-ubuntu.sh
search/: search_index.json
socket_8cpp/: index.html
socket_8cpp_source/: index.html
socket_8hpp/: index.html
socket_8hpp_source/: index.html
socket__test_8cpp/: index.html
src/: socket.cpp  socket_test.cpp
structaddrinfo/: index.html
variables/: index.html
xml/: Doxyfile.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  namespacestd.xml  socket_8cpp.xml  socket_8hpp.xml  socket__test_8cpp.xml  structaddrinfo.xml
